--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,13 @@
 <html>
   <head>
      {% include head_content.html %}
-    <title>Michael Forrest's Museum Of Unfinished Projects</title>  
+    <title>{{page.title}}</title> 
   </head>
   <body>
     <header>
       <div class="inner">
-        <h1>mf://TODO</h1>
-        <h2>Michael Forrest's Museumof Unfinished Projects</h2>
+        <h1>{{site.title}}</h1>
+        <h2>{{site.subtitle}}</h2>
         <a href="https://github.com/michaelforrest" class="button"><small>Follow me on</small>GitHub</a>
       </div>
     </header>
