--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     {% include head_content.html %}
-    <title>Michael Forrest's Museum Of Unfinished Projects</title>
+    <title>{{page.title}}</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>mf://TODO</h1>
-        <h2>Michael Forrest's Museumof Unfinished Projects</h2>
+        <h1>{{site.title}}</h1>
+        <h2>{{site.subtitle}}</h2>
         <a href="https://github.com/michaelforrest" class="button"><small>Follow me on</small>GitHub</a>
       </div>
     </header>
@@ -18,16 +18,23 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>{{ page.title }}</h1>
+          
+
           <aside class="meta">
             <dl>
               <dt>Started:</dt>
               <dd>{{ page.started_on }}
+            </dl>
+            <dl>
               <dt>Last updated:</dt>
               <dd>{{ page.last_updated_on }}
+            </dl>
+            <dl>
               <dt>Status:</dt>
               <dd><img src="/images/status/{{ page.status | handleize }}.png" alt="{{ page.status }}"/></dd>
             </dl>
           </aside>
+          <iframe class="youtube" src="//www.youtube.com/embed/{{page.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
           {{ content }}
         </section>
 
