--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,20 +6,25 @@
   </head>
 
   <body>
+    <div id="fb-root"></div>
+    {% include facebook_sdk.html app_id="170078826515753" %}
     <header>
       <div class="inner">
-        <h1>{{site.title}}</h1>
+        <h1><a href="/">{{site.title}}</a></h1>
         <h2>{{site.subtitle}}</h2>
-        <a href="https://github.com/michaelforrest" class="button"><small>Follow me on</small>GitHub</a>
+        <!-- <a href="https://github.com/michaelforrest" class="button"><small>Follow me on</small>GitHub</a> -->
+        <aside class="social">
+          {% include follow.html username="michaelforrest" %}
+          {% include like.html url="https://www.facebook.com/MichaelForrestBlog" %}
+        </aside>
       </div>
     </header>
 
     <div id="content-wrapper">
       <div class="inner clearfix">
+        
         <section id="main-content">
           <h1>{{ page.title }}</h1>
-          
-
           <aside class="meta">
             <dl>
               <dt>Started:</dt>
@@ -29,12 +34,17 @@
               <dt>Last updated:</dt>
               <dd>{{ page.last_updated_on }}
             </dl>
+            <dl class="time_required">
+              <dt>Finishable in:</dt>
+              <dd>{{page.time_required}}</dd>
+            </dl>
             <dl>
               <dt>Status:</dt>
               <dd><img src="/images/status/{{ page.status | handleize }}.png" alt="{{ page.status }}"/></dd>
             </dl>
           </aside>
           <iframe class="youtube" src="//www.youtube.com/embed/{{page.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
+
           {{ content }}
         </section>
 
