did the sharing

--- a/stylesheets/all.styl
+++ b/stylesheets/all.styl
@@ -13,7 +13,8 @@ h1 a
   color white
   &:hover
     color #a6c4f3
-
+h1,h2
+  line-height 1em
 ul,ol
   li
     list-style disc
@@ -38,12 +39,15 @@ aside.meta
   dl
     padding 0
     margin 0
+div.sharing
+  margin-top 10px
+  margin-bottom 10px
 
 @media only screen and (max-width: 767px)
   dl
     display block
     float left
-    width 30%
+    width 25%
 
   iframe.youtube
     width 100%
