--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,6 +28,7 @@
         
         <section id="main-content">
           <h1>{{ page.title }}</h1>
+          {% include sharing.html page=page %}
           <aside class="meta">
             <dl>
               <dt>Started:</dt>
@@ -45,11 +46,12 @@
               <dt>Status:</dt>
               <dd><img src="/images/status/{{ page.status | handleize }}.png" alt="{{ page.status }}"/></dd>
             </dl>
+            
           </aside>
           <iframe class="youtube" src="//www.youtube.com/embed/{{page.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
 
           {{ content }}
-
+          {% include sharing.html page=page %}
           <div class="fb-comments" data-href="{{page.url}}" data-width="470"></div>
         </section>
 
