--- a/stylesheets/all.styl
+++ b/stylesheets/all.styl
@@ -34,7 +34,8 @@ aside#sidebar
     font-size 200%
   li
     list-style none
-
+#progress_chart
+	margin-left: -10px;
 .more
   // color #68BB48
 
@@ -50,7 +51,9 @@ div.sharing
   dl
     display block
     float left
-    width 25%
+    width 33%
+	dd
+		margin-bottom 10px
 
   iframe.youtube
     width 100%
