--- a/stylesheets/all.styl
+++ b/stylesheets/all.styl
@@ -5,7 +5,6 @@ font()
   font-family: Sketchetik-Light !important
   font-weight: normal !important
   font-style: normal !important
-
 h1,h2,h3,h4,h5,h6,a.button
   font()
 
@@ -51,10 +50,10 @@ div.sharing
   dl
     display block
     float left
-    width 33%
+    padding-right 10px
 	dd
-		margin-bottom 10px
-
+	  margin-bottom 10px
+	  padding-right 10px
   iframe.youtube
     width 100%
     height 300px
