--- a/_includes/head_content.html
+++ b/_includes/head_content.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print" />
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/all.css" />
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
