--- a/_includes/head_content.html
+++ b/_includes/head_content.html
@@ -9,6 +9,8 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print" />
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="/stylesheets/all.css" />
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
@@ -17,4 +19,33 @@
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
 	google.load("visualization", "1", {packages:["corechart"]});
+  
+  google.setOnLoadCallback(function(){
+   $(".progress_chart").each(function(){ 
+      var chart = new google.visualization.PieChart(this);
+      var titles = $(this).data("titles").split(',');
+      var values = $(this).data("values").split(',')
+      var data = new google.visualization.DataTable();
+      data.addColumn('string', 'Tasks');
+      data.addColumn('number', 'Progress');
+      for (i = 0; i < titles.length; i++)
+          data.addRow([titles[i], parseFloat(values[i])]);
+      var options = {
+        pieHole: 0.4, 
+        legend:'none',
+        colors:[
+          '#68BB48', '#6188C0','#6188C0','#6188C0','#6188C0','#6188C0','#6188C0'
+          ],
+        chartArea:{left:10,top:10,width:120,height:120},
+        width: 140, 
+        height:140,
+        pieSliceText: 'none',
+        tooltip: {
+          text: 'percentage'
+        }
+      };
+      chart.draw(data,options);
+    });
+  });
 </script>
+ 
