--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
   <head>
      {% include head_content.html %}
     <title>{{page.title}}</title> 
+    <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
   </head>
   <body>
     <div id="fb-root"></div>
