--- a/stylesheets/all.styl
+++ b/stylesheets/all.styl
@@ -14,6 +14,8 @@ h1 a
     color #a6c4f3
 h1,h2
   line-height 1em
+h3
+  clear left
 
 #main-content h3
   color #2564bf
@@ -38,6 +40,9 @@ aside#sidebar
 .more
   // color #68BB48
   margin-bottom 20px
+.post img
+  margin 0 20px 20px 0
+  box-shadow: 0 1px 3px 0;
 
 aside.meta
   dl
