added gallery functionality and published donegood

--- a/stylesheets/all.styl
+++ b/stylesheets/all.styl
@@ -41,7 +41,7 @@ aside#sidebar
   // color #68BB48
   margin-bottom 20px
 .post img
-  margin 0 20px 20px 0
+  margin-bottom: 20px
   box-shadow: 0 1px 3px 0;
 
 aside.meta
@@ -83,9 +83,21 @@ div.sharing
     right 0
     top 0
 
+  p > img
+    float right
+    margin-left 20px
+
 @media only screen and (min-width: 960px)
  iframe.youtube
     width 500px
     height 340px
 
-  
+.thumbnails li
+  display inline
+
+
+.thumbnail  
+  border none
+  img
+    width 40px
+
