--- a/_includes/head_content.html
+++ b/_includes/head_content.html
@@ -50,4 +50,10 @@
     });
   });
 </script>
- 
+
+
+<link rel="stylesheet" href="/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
+<script type="text/javascript" src="/fancybox/jquery.fancybox.pack.js"></script>
+
+
+<script type="text/javascript" src="/javascripts/main.js"></script>
