--- a/_includes/head_content.html
+++ b/_includes/head_content.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print" />
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="/stylesheets/all.css" />
+<link rel="stylesheet" type="text/css" href="/stylesheets/all.css?5" />
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <!--[if lt IE 9]>
